# TheManifoldWeb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ManifoldDAO.sol  ManifoldGovernanceToken.sol
contracts/test/: ManifoldDAO.t.sol  ManifoldGovernanceToken.t.sol
crates/genesis-sdk/: Cargo.toml
crates/genesis-sdk/src/: ipfs.rs  lib.rs  spawn.rs
crates/manifold-archiver/: Cargo.toml
crates/manifold-archiver/src/: lib.rs
crates/manifold-contracts/: Cargo.toml
crates/manifold-contracts/src/: context.rs  errors.rs  lib.rs  runtime.rs  state.rs  storage.rs  traits.rs
crates/manifold-contracts/src/governance/: dao.rs  mod.rs  token.rs
crates/manifold-contracts/src/templates/: custom_governance.rs  mod.rs  simple_token.rs
crates/manifold-node/: Cargo.toml
crates/manifold-node/src/: behaviour.rs  contracts.rs  main.rs  network.rs  simulation.rs
crates/manifold-protocol/: Cargo.toml
crates/manifold-protocol/src/: consensus.rs  errors.rs  lib.rs  models.rs
crates/observer-client/: Cargo.toml
crates/observer-client/src/: dead_reckoning.rs  main.rs  observer.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_SETUP.md  QUICKSTART.md
python/simulation-lab/: demo.py  ga_demo.py  requirements.txt  test_simulation.py
