[workspace]
resolver = "2"
members = [
    "crates/manifold-protocol",
    "crates/manifold-node",
    "crates/genesis-sdk",
    "crates/observer-client",
    "crates/manifold-archiver",
    "crates/manifold-contracts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Manifold Web Contributors"]
license = "MIT"
repository = "https://github.com/Eccb7/TheManifoldWeb"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "request-response", "identify", "macros", "tokio", "cbor"] }
libp2p-identity = { version = "0.2", features = ["peerid"] }
futures = "0.3"

# Math and utilities
glam = { version = "0.28", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"

# HTTP and IPFS
reqwest = { version = "0.12", features = ["multipart", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
manifold-protocol = { path = "crates/manifold-protocol" }
manifold-contracts = { path = "crates/manifold-contracts" }
