[package]
name = "manifold-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
manifold-protocol = { path = "../manifold-protocol" }
arweave-rs = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "archive-genesis"
path = "src/bin/archive_genesis.rs"
