[package]
name = "manifold-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
manifold-protocol = { workspace = true }
manifold-contracts = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
glam = { workspace = true }
sha2 = { workspace = true }
