[package]
name = "observer-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
manifold-protocol = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glam = { workspace = true }

# Placeholder dependencies for future GUI rendering
# wgpu = "0.18"
# rend3 = "0.3"
